beta_parser/c_parser.output
Terminals unused in grammar

   T_COLON


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROGRAM

    2 PROGRAM: %empty
    3        | PROGRAM STATEMENT

    4 STATEMENT: DECLARATION
    5          | ASSIGNMENT
    6          | JUMP

    7 STATEMENT_LIST: %empty
    8               | STATEMENT_LIST STATEMENT

    9 DECLARATION: FUNC_DECLARATION
   10            | VAR_DECLARATION T_SEMICOLON

   11 FUNC_DECLARATION: TYPE T_VARIABLE T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET

   12 ARGUMENT_LIST: %empty
   13              | ARGUMENT
   14              | ARGUMENT_LIST T_COMMA ARGUMENT

   15 ARGUMENT: TYPE T_VARIABLE

   16 TYPE: T_INT

   17 ASSIGNMENT: VAR_DECLARATION ASSIGN_OPERATOR EXPR T_SEMICOLON
   18           | T_VARIABLE ASSIGN_OPERATOR EXPR T_SEMICOLON

   19 VAR_DECLARATION: TYPE VALUE

   20 ASSIGN_OPERATOR: T_ASSIGN

   21 JUMP: RETURN

   22 RETURN: T_RETURN VALUE T_SEMICOLON

   23 EXPR: VALUE

   24 VALUE: T_NUMBER
   25      | T_VARIABLE


Terminals, with rules where they appear

$end (0) 0
error (256)
T_ASSIGN (258) 20
T_LBRACKET (259) 11
T_RBRACKET (260) 11
T_LCURLBRACKET (261) 11
T_RCURLBRACKET (262) 11
T_SEMICOLON (263) 10 17 18 22
T_COLON (264)
T_COMMA (265) 14
T_INT (266) 16
T_RETURN (267) 22
T_NUMBER (268) 24
T_VARIABLE (269) 11 15 18 25


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
ROOT (16)
    on left: 1, on right: 0
PROGRAM (17)
    on left: 2 3, on right: 1 3
STATEMENT (18)
    on left: 4 5 6, on right: 3 8
STATEMENT_LIST (19)
    on left: 7 8, on right: 8 11
DECLARATION (20)
    on left: 9 10, on right: 4
FUNC_DECLARATION (21)
    on left: 11, on right: 9
ARGUMENT_LIST (22)
    on left: 12 13 14, on right: 11 14
ARGUMENT (23)
    on left: 15, on right: 13 14
TYPE (24)
    on left: 16, on right: 11 15 19
ASSIGNMENT (25)
    on left: 17 18, on right: 5
VAR_DECLARATION (26)
    on left: 19, on right: 10 17
ASSIGN_OPERATOR (27)
    on left: 20, on right: 17 18
JUMP (28)
    on left: 21, on right: 6
RETURN (29)
    on left: 22, on right: 21
EXPR (30)
    on left: 23, on right: 17 18
VALUE (31)
    on left: 24 25, on right: 19 22 23


State 0

    0 $accept: . ROOT $end

    $default  reduce using rule 2 (PROGRAM)

    ROOT     go to state 1
    PROGRAM  go to state 2


State 1

    0 $accept: ROOT . $end

    $end  shift, and go to state 3


State 2

    1 ROOT: PROGRAM .
    3 PROGRAM: PROGRAM . STATEMENT

    T_INT       shift, and go to state 4
    T_RETURN    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    $default  reduce using rule 1 (ROOT)

    STATEMENT         go to state 7
    DECLARATION       go to state 8
    FUNC_DECLARATION  go to state 9
    TYPE              go to state 10
    ASSIGNMENT        go to state 11
    VAR_DECLARATION   go to state 12
    JUMP              go to state 13
    RETURN            go to state 14


State 3

    0 $accept: ROOT $end .

    $default  accept


State 4

   16 TYPE: T_INT .

    $default  reduce using rule 16 (TYPE)


State 5

   22 RETURN: T_RETURN . VALUE T_SEMICOLON

    T_NUMBER    shift, and go to state 15
    T_VARIABLE  shift, and go to state 16

    VALUE  go to state 17


State 6

   18 ASSIGNMENT: T_VARIABLE . ASSIGN_OPERATOR EXPR T_SEMICOLON

    T_ASSIGN  shift, and go to state 18

    ASSIGN_OPERATOR  go to state 19


State 7

    3 PROGRAM: PROGRAM STATEMENT .

    $default  reduce using rule 3 (PROGRAM)


State 8

    4 STATEMENT: DECLARATION .

    $default  reduce using rule 4 (STATEMENT)


State 9

    9 DECLARATION: FUNC_DECLARATION .

    $default  reduce using rule 9 (DECLARATION)


State 10

   11 FUNC_DECLARATION: TYPE . T_VARIABLE T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET
   19 VAR_DECLARATION: TYPE . VALUE

    T_NUMBER    shift, and go to state 15
    T_VARIABLE  shift, and go to state 20

    VALUE  go to state 21


State 11

    5 STATEMENT: ASSIGNMENT .

    $default  reduce using rule 5 (STATEMENT)


State 12

   10 DECLARATION: VAR_DECLARATION . T_SEMICOLON
   17 ASSIGNMENT: VAR_DECLARATION . ASSIGN_OPERATOR EXPR T_SEMICOLON

    T_ASSIGN     shift, and go to state 18
    T_SEMICOLON  shift, and go to state 22

    ASSIGN_OPERATOR  go to state 23


State 13

    6 STATEMENT: JUMP .

    $default  reduce using rule 6 (STATEMENT)


State 14

   21 JUMP: RETURN .

    $default  reduce using rule 21 (JUMP)


State 15

   24 VALUE: T_NUMBER .

    $default  reduce using rule 24 (VALUE)


State 16

   25 VALUE: T_VARIABLE .

    $default  reduce using rule 25 (VALUE)


State 17

   22 RETURN: T_RETURN VALUE . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 24


State 18

   20 ASSIGN_OPERATOR: T_ASSIGN .

    $default  reduce using rule 20 (ASSIGN_OPERATOR)


State 19

   18 ASSIGNMENT: T_VARIABLE ASSIGN_OPERATOR . EXPR T_SEMICOLON

    T_NUMBER    shift, and go to state 15
    T_VARIABLE  shift, and go to state 16

    EXPR   go to state 25
    VALUE  go to state 26


State 20

   11 FUNC_DECLARATION: TYPE T_VARIABLE . T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET
   25 VALUE: T_VARIABLE .

    T_LBRACKET  shift, and go to state 27

    $default  reduce using rule 25 (VALUE)


State 21

   19 VAR_DECLARATION: TYPE VALUE .

    $default  reduce using rule 19 (VAR_DECLARATION)


State 22

   10 DECLARATION: VAR_DECLARATION T_SEMICOLON .

    $default  reduce using rule 10 (DECLARATION)


State 23

   17 ASSIGNMENT: VAR_DECLARATION ASSIGN_OPERATOR . EXPR T_SEMICOLON

    T_NUMBER    shift, and go to state 15
    T_VARIABLE  shift, and go to state 16

    EXPR   go to state 28
    VALUE  go to state 26


State 24

   22 RETURN: T_RETURN VALUE T_SEMICOLON .

    $default  reduce using rule 22 (RETURN)


State 25

   18 ASSIGNMENT: T_VARIABLE ASSIGN_OPERATOR EXPR . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 29


State 26

   23 EXPR: VALUE .

    $default  reduce using rule 23 (EXPR)


State 27

   11 FUNC_DECLARATION: TYPE T_VARIABLE T_LBRACKET . ARGUMENT_LIST T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET

    T_INT  shift, and go to state 4

    $default  reduce using rule 12 (ARGUMENT_LIST)

    ARGUMENT_LIST  go to state 30
    ARGUMENT       go to state 31
    TYPE           go to state 32


State 28

   17 ASSIGNMENT: VAR_DECLARATION ASSIGN_OPERATOR EXPR . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 33


State 29

   18 ASSIGNMENT: T_VARIABLE ASSIGN_OPERATOR EXPR T_SEMICOLON .

    $default  reduce using rule 18 (ASSIGNMENT)


State 30

   11 FUNC_DECLARATION: TYPE T_VARIABLE T_LBRACKET ARGUMENT_LIST . T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET
   14 ARGUMENT_LIST: ARGUMENT_LIST . T_COMMA ARGUMENT

    T_RBRACKET  shift, and go to state 34
    T_COMMA     shift, and go to state 35


State 31

   13 ARGUMENT_LIST: ARGUMENT .

    $default  reduce using rule 13 (ARGUMENT_LIST)


State 32

   15 ARGUMENT: TYPE . T_VARIABLE

    T_VARIABLE  shift, and go to state 36


State 33

   17 ASSIGNMENT: VAR_DECLARATION ASSIGN_OPERATOR EXPR T_SEMICOLON .

    $default  reduce using rule 17 (ASSIGNMENT)


State 34

   11 FUNC_DECLARATION: TYPE T_VARIABLE T_LBRACKET ARGUMENT_LIST T_RBRACKET . T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET

    T_LCURLBRACKET  shift, and go to state 37


State 35

   14 ARGUMENT_LIST: ARGUMENT_LIST T_COMMA . ARGUMENT

    T_INT  shift, and go to state 4

    ARGUMENT  go to state 38
    TYPE      go to state 32


State 36

   15 ARGUMENT: TYPE T_VARIABLE .

    $default  reduce using rule 15 (ARGUMENT)


State 37

   11 FUNC_DECLARATION: TYPE T_VARIABLE T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCURLBRACKET . STATEMENT_LIST T_RCURLBRACKET

    $default  reduce using rule 7 (STATEMENT_LIST)

    STATEMENT_LIST  go to state 39


State 38

   14 ARGUMENT_LIST: ARGUMENT_LIST T_COMMA ARGUMENT .

    $default  reduce using rule 14 (ARGUMENT_LIST)


State 39

    8 STATEMENT_LIST: STATEMENT_LIST . STATEMENT
   11 FUNC_DECLARATION: TYPE T_VARIABLE T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCURLBRACKET STATEMENT_LIST . T_RCURLBRACKET

    T_RCURLBRACKET  shift, and go to state 40
    T_INT           shift, and go to state 4
    T_RETURN        shift, and go to state 5
    T_VARIABLE      shift, and go to state 6

    STATEMENT         go to state 41
    DECLARATION       go to state 8
    FUNC_DECLARATION  go to state 9
    TYPE              go to state 10
    ASSIGNMENT        go to state 11
    VAR_DECLARATION   go to state 12
    JUMP              go to state 13
    RETURN            go to state 14


State 40

   11 FUNC_DECLARATION: TYPE T_VARIABLE T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCURLBRACKET STATEMENT_LIST T_RCURLBRACKET .

    $default  reduce using rule 11 (FUNC_DECLARATION)


State 41

    8 STATEMENT_LIST: STATEMENT_LIST STATEMENT .

    $default  reduce using rule 8 (STATEMENT_LIST)
